<resources>
    <string name="app_name">SDPapp</string>
    <string name="checkbox">I agree to the terms and conditions</string>
    <string name="username">Username</string>
    <string name="submit">Submit</string>
    <string name="password">Password</string>
    <string name="username1">username</string>
    <string name="re_enter_password">Re-enter password</string>
    <string name="terms_and_conditions">Terms and conditions</string>
    <string name="title_activity_personal_information">PersonalInformation</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="i_m_a_fragment">I\'m a fragment</string>
</resources>
